--- a/1.css
+++ b/1.css
@@ -66,13 +66,15 @@ body {
 #img_douban {
     position: relative;
     top: -8px;
-    left: -512px;
+    left: -500px;
 }
 
 #div_middle {
     width: 100%;
     height: 272px;
-    border: 1px solid black;
+    min-width: 120%;
+    overflow: auto; 
+    border: 1px solid #e1e8e5;
     background-color: #e1e8e5;
     position: relative;
 }
@@ -80,7 +82,8 @@ body {
 .div_middle_ul {
     width: 311px;
     height: 765px;
-    border: 1px solid black;
+   /* border: 1px solid black;*/
+    /*overflow-x: hidden;*/
     position: relative;
     left: 253px;
     top: -25px;
@@ -89,7 +92,7 @@ body {
 .ul_middle {
     width: 255px;
     height: 206px;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     position: relative;
     top: 24px;
     left: 8px;
@@ -104,13 +107,46 @@ body {
     margin-top: 14px;
     list-style: none;
 }
-
-.span_list {
-    margin-left: 22px;
+.ul_middle_1 {
+    width: 255px;
+    height: 262px;
+    /*border: 1px solid black;*/
+    position: relative;
+    top: 74px;
+    left: 8px;
 }
 
 .li_middle_1 {
-    background-color: white;
+    width: 220px;
+    height: 38px;
+    background-color: #d4ded9;
+    font-size: 13px;
+    line-height: 38px;
+    margin-top: 14px;
+    list-style: none;
+}
+.ul_middle_2 {
+    width: 255px;
+    height: 70px;
+   /* border: 1px solid black;*/
+    position: relative;
+    top: 76px;
+    left: 8px;
+}
+
+.li_middle_2 {
+    width: 220px;
+    height: 38px;
+    background-color: #d4ded9;
+    font-size: 13px;
+    line-height: 38px;
+    margin-top: 14px;
+    list-style: none;
+}
+
+
+.span_list {
+    margin-left: 22px;
 }
 
 .span_wenzi_1 {
@@ -118,7 +154,7 @@ body {
     color: #999;
     position: relative;
     top: 38px;
-    left: 42px;
+    left: 44px;
 }
 
 .span_border_1 {
@@ -127,7 +163,7 @@ body {
     border-bottom: 1px solid #999;
     position: relative;
     top: 30px;
-    left: 105px;
+    left: 107px;
 }
 
 .span_wenzi_2 {
@@ -135,7 +171,7 @@ body {
     color: #999;
     position: relative;
     top: 75px;
-    left: 42px;
+    left: 44px;
 }
 
 .span_border_2 {
@@ -144,7 +180,23 @@ body {
     border-bottom: 1px solid #999;
     position: relative;
     top: 70px;
-    left: 105px;
+    left: 107px;
+}
+.span_wenzi_3 {
+    font-size: 13px;
+    color: #999;
+    position: relative;
+    top: 75px;
+    left: 44px;
+}
+
+.span_border_3 {
+    width: 162px;
+    height: 0;
+    border-bottom: 1px solid #999;
+    position: relative;
+    top: 70px;
+    left: 107px;
 }
 
 #div_player {
@@ -222,8 +274,7 @@ body {
 }
 #img_laba{
   position: relative;
-  top: -231px;
-  left: 473px;
+ 
 }
 .div_paused{
   width: 263px;
@@ -240,10 +291,11 @@ body {
 .div_control_voice{
   width: 116px;
   height: 18px;
- 
+ background-color: white;
   position: absolute;
   top:115px;
   left: 378px;
+ 
  
 
 
@@ -252,6 +304,7 @@ body {
   position: relative;
   top: 0px;
   left: 30px;
+
  
 }
 .ul_span_1{
@@ -294,7 +347,7 @@ background-color: #e1e8e5;
 }
 .div_voice_process{
   background-color: black;
-  line-height: 150%;
+  line-height: 100%;
   position: relative;
   float: left;
   top: -1px;
@@ -307,4 +360,11 @@ background-color: #e1e8e5;
   float: right;
   top: 0px;
 }
-.
+.div_img_laba{
+  width: 19px;
+  height: 15px;
+  
+  position: absolute;
+  top: 116px;
+  left: 473px;
+}
