--- a/1.css
+++ b/1.css
@@ -409,8 +409,8 @@ body {
     font-size: 15px;
     text-align: center;
     line-height: 24px;
-    color: green;
-    border: 1px solid green;
+    color: #389c7f;
+    border: 1px solid #389c7f;
     position: absolute;
     top: 274px;
     left: 413px;
@@ -418,7 +418,7 @@ body {
 
 .div_listen:hover {
     color: white;
-    background-color: green;
+    background-color: #389c7f;
 }
 
 .div_enjoymusic {
@@ -429,15 +429,108 @@ body {
     line-height: 24px;
     color: #a1a5a8;
     position: absolute;
-    top: 312px;
+    top: 2px;
+    left: 10px;
+}
+.div_enjoy{
+   width: 95px;
+    height: 24px;
+    font-size: 14px;
+    text-align: center;
+    line-height: 24px;
+    color: #a1a5a8;
+    position: absolute;
+    top: 308px;
     left: 424px;
+    z-index:50;
+    
 }
 
 #div_music {
-    width: 95px;
-    height: 24px;
-    border: 1px solid black;
+    width: 266px;
+    height: 38px;
+    
     position: absolute;
-    top: 312px;
-    left: 424px;
+    top: 307px;
+    left: 249px;
+}
+#img_dou{
+  position: absolute;
+  top: 2px;
+  left: 101px;
+}
+#img_wei{
+  position: absolute;
+  top: 2px;
+  left: 126px;
+}
+#img_weixin{
+  position: absolute;
+  top: 3px;
+  left: 154px;
+}
+#img_qq{
+  position: absolute;
+  top: 3px;
+  left: 182px;
+}
+#img_weibo{
+  position: absolute;
+  top: 1px;
+  left: 208px;
+}
+#img_renren{
+  position: absolute;
+  top: 1px;
+  left: 233px;
+}
+#div_bottom{
+  width: 100%;
+  height: 370px;
+  border: 1px solid white;
+  position: relative;
+  top: -246px;
+}
+#img_xiazai{
+  position: absolute;
+  top: 20px;
+  left: 958px;
+}
+.div_bottom_text{
+  width: 910px;
+  height: 110px;
+  border: 1px solid white;
+  position: absolute;
+  top: 138px;
+  left: 221px;
+}
+#img_guanggao{
+  position: absolute;
+  top: 265px;
+  left: 190px;
+}
+.span_bottom_1{
+  font-size: 10px;
+  color:#999; 
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.span_bottom_2:hover{
+  background-color: #999;
+  color: white;
+}
+.span_bottom_3{
+  font-size: 10px;
+  color:#999; 
+  position: absolute;
+  top: 20px;
+  left: 524px;
+}
+.span_bottom_4{
+  font-size: 10px;
+  color:#999; 
+  position: absolute;
+  top: 60px;
+  left: 350px;
 }
