--- a/1.css
+++ b/1.css
@@ -44,6 +44,10 @@ body {
     list-style: none;
     color: #999;
 }
+.li_title:hover{
+  cursor: pointer;
+  color: black;
+}
 
 .span_title_2 {
     font-size: 13px;
@@ -52,7 +56,10 @@ body {
     top: -37px;
     left: 72px;
 }
-
+.span_title_2:hover{
+  cursor: pointer;
+  color: black;
+}
 .span_title_3 {
     font-size: 12px;
     color: #999;
@@ -71,7 +78,7 @@ body {
 #div_middle {
     width: 100%;
     height: 272px;
-    min-width: 120%;
+    min-width:101%;
     overflow: auto;
     border: 1px solid #e1e8e5;
     background-color: #e1e8e5;
@@ -143,6 +150,7 @@ body {
     margin-top: 14px;
     list-style: none;
 }
+
 
 .span_list {
     margin-left: 22px;
@@ -339,6 +347,7 @@ body {
 
 .li_span_1:hover {
     background-color: #e1e8e5;
+    cursor: pointer;
 }
 
 .divtop_span_1:hover .ul_span_1 {
@@ -533,4 +542,7 @@ body {
   position: absolute;
   top: 60px;
   left: 350px;
+}
+.li_middle_1:hover{
+  background-color: #a1a5a8;
 }
