--- a/2.css
+++ b/2.css
@@ -1,129 +1,143 @@
-body{
-  padding: 0px;
-  margin: 0px;
+body {
+    padding: 0px;
+    margin: 0px;
 }
-#div_left_body{
-width: 675px;
-height: 1500px;
 
-background-color: white;
-position: absolute;
-top: 0px;
-left: 0px;
+#div_left_body {
+    width: 675px;
+    height: 1500px;
+    background-color: white;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
-#div_left_top{
-width: 675px;
-height: 170px;
-/*border: 1px solid black;*/
-position: relative;
-}
-.span_left_title{
-  font-size: 30px;
-  color: #a2a8ac;
-  position: absolute;
-  top: 72px;
-  left: 50px;
-}
-.div_input_border{
-  width: 240px;
-  height: 27px;
-  border:1px solid #a2a8ac;
-  position: absolute;
-  top: 73px;
-  left: 390px;
-}
-#input_text{
-  width: 200px;
-  height: 14px;
-  outline: none;
-  border: none;
-  position: relative;
-  top: -6px;
-  left: 8px;
 
+#div_left_top {
+    width: 675px;
+    height: 170px;
+    /*border: 1px solid black;*/
+    position: relative;
 }
-#img_jingzi{
-  position: relative;
-  top: 3px;
-  left: 2px;
-}
-#img_jingzi:hover{
-  cursor: pointer;
-}
-#div_left_middle{
-  width: 675px;
-  height: 278px;
- /* border: 1px solid white;*/
-  
-}
-.div_left_picture{
-  width: 383px;
-  height: 278px;
-  background-color: #eff5f2;
-  position: relative;
-  top: -295px;
-  left: 290px;
-}
-.ul_left_nummber{
-  width: 329px;
-  height: 15px;
-  position: relative;
-  top: 27px;
-  left: -8px;
-}
-.li_left_nummber{
-  width: 16px;
-  height: 16px;
-  line-height: 16px;
-  text-align: center;
-  list-style: none;
-  float: left;
-  margin-right: 4px;
-  color: #888;
-  border-radius: 16px;
-  background-color: #d4e1dc;
-  cursor: pointer;
-}
-.div_left_text{
-  width:294px;
-  height: 186px;
-  /*border: 1px solid black;*/
-  position: relative;
-  top: 35px;
-  left: 29px; 
-}
-.left_text_1{
-  width: 293px;
-  height:38px;
-  /*border: 1px solid black;*/
-  font-size: 19px;
-  color: #636564;
-  position: relative;
-  top: 5px;
 
+.span_left_title {
+    font-size: 30px;
+    color: #a2a8ac;
+    position: absolute;
+    top: 72px;
+    left: 50px;
 }
-#img_MHZ{
-  position: relative;
-  left: 2px;
-  top: 5px;
+
+.div_input_border {
+    width: 240px;
+    height: 27px;
+    border: 1px solid #a2a8ac;
+    position: absolute;
+    top: 73px;
+    left: 390px;
 }
-.left_text_2{
-  width: 293px;
-  height:25px;
-  /*border: 1px solid black;*/
-  font-size: 12px;
-  color: #423c3c;
-  position: relative;
-  top: 25px;
-  
+
+#input_text {
+    width: 200px;
+    height: 14px;
+    outline: none;
+    border: none;
+    position: relative;
+    top: -6px;
+    left: 8px;
 }
-.left_text_3{
-  width: 293px;
-  height:45px;
-  /*border: 1px solid black;*/
-  font-size: 11px;
-  color: #636564;
-  position: relative;
-  top: 40px;
- 
+
+#img_jingzi {
+    position: relative;
+    top: 3px;
+    left: 2px;
+}
+
+#img_jingzi:hover {
+    cursor: pointer;
+}
+
+#div_left_middle {
+    width: 675px;
+    height: 278px;
+    /* border: 1px solid white;*/
+}
+
+.div_left_picture {
+    width: 383px;
+    height: 278px;
+    background-color: #eff5f2;
+    position: relative;
+    top: -295px;
+    left: 290px;
+}
+
+.ul_left_nummber {
+    width: 329px;
+    height: 15px;
+    position: relative;
+    top: 27px;
+    left: -8px;
+}
+
+.li_left_nummber {
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    text-align: center;
+    list-style: none;
+    float: left;
+    margin-right: 4px;
+    color: #888;
+    border-radius: 16px;
+    background-color: #d4e1dc;
+    cursor: pointer;
+}
+
+.li_left_nummber:hover {
+    background-color: #9dd6c5;
+}
+
+.div_left_text {
+    width: 294px;
+    height: 186px;
+    /*border: 1px solid black;*/
+    position: relative;
+    top: 35px;
+    left: 29px;
+}
+
+.left_text_1 {
+    width: 293px;
+    height: 38px;
+    /*border: 1px solid black;*/
+    font-size: 19px;
+    color: #636564;
+    position: relative;
+    top: 5px;
+}
+
+#img_MHZ {
+    position: relative;
+    left: 2px;
+    top: 5px;
+}
+
+.left_text_2 {
+    width: 293px;
+    height: 25px;
+    /*border: 1px solid black;*/
+    font-size: 12px;
+    color: #423c3c;
+    position: relative;
+    top: 25px;
+}
+
+.left_text_3 {
+    width: 293px;
+    height: 45px;
+    /*border: 1px solid black;*/
+    font-size: 11px;
+    color: #636564;
+    position: relative;
+    top: 40px;
 }
