--- a/2.css
+++ b/2.css
@@ -141,3 +141,101 @@ body {
     position: relative;
     top: 40px;
 }
+.ul_musictype{
+  width: 506px;
+  height: 48px;
+  position: absolute;
+  top: 478px;
+  left: 10px;
+}
+.li_musictype{
+  width: 35px;
+  height: 12px;
+  color: #888;
+  font-size: 12px;
+  margin-right: 8px;
+  margin-bottom: 12px;
+  line-height: 12px;
+  border-right: 1px solid #ccc;
+  list-style: none;
+  float: left;
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+.li_musictype:hover{
+  color: #9dd6c5;
+  cursor: pointer;
+}
+.li_musictype_1{
+   width: 62px;
+  height: 12px;
+}
+.li_musictype_2{
+   width: 59px;
+  height: 12px;
+}
+.li_musictype_3{
+   width: 47px;
+  height: 12px;
+}
+.li_musictype_4{
+   width: 89px;
+  height: 12px;
+}
+#div_left_bottom{
+  width: 674px;
+  height: 930px;
+  border: 1px solid black;
+  position: absolute;
+  top: 572px;
+}
+.bottom_title_1{
+  font-size: 13px;
+  position: absolute;
+  top: 6px;
+  left: 52px;
+}
+.ul_bottom{
+  width: 554px;
+  height: 350px;
+  position: absolute;
+  top: 30px;
+  left: 49px;
+}
+.li_bottom{
+  width: 236px;
+  height: 45px;
+  margin-right: 40px;
+  margin-bottom: 29px;
+  list-style: none;
+  float: left;
+  position: relative;
+  left: -37px;
+  cursor: pointer;
+}
+.span_1{
+  font-size: 15px;
+  position: relative;
+  top: -27px;
+  left: 0px;
+}
+.span_2{
+  color: #354079;
+  position: relative;
+  top: -27px;
+  left: 2px;
+}
+.span_3{
+  font-size: 10px;
+  color: #a09b9b;
+  position: relative;
+  top: -27px;
+  left: 59px;
+}
+.bottom_title_2{
+  font-size: 13px;
+  position: absolute;
+  top: 430px;
+  left: 52px;
+}
