--- a/2.css
+++ b/2.css
@@ -5,17 +5,17 @@ body {
 
 #div_left_body {
     width: 675px;
-    height: 1500px;
+    height: 1550px;
     background-color: white;
+    box-shadow: #99a9a2 0 0 20px;
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: -646px;
 }
 
 #div_left_top {
     width: 675px;
     height: 170px;
-    /*border: 1px solid black;*/
     position: relative;
 }
 
@@ -100,7 +100,6 @@ body {
 .div_left_text {
     width: 294px;
     height: 186px;
-    /*border: 1px solid black;*/
     position: relative;
     top: 35px;
     left: 29px;
@@ -109,7 +108,6 @@ body {
 .left_text_1 {
     width: 293px;
     height: 38px;
-    /*border: 1px solid black;*/
     font-size: 19px;
     color: #636564;
     position: relative;
@@ -125,7 +123,6 @@ body {
 .left_text_2 {
     width: 293px;
     height: 25px;
-    /*border: 1px solid black;*/
     font-size: 12px;
     color: #423c3c;
     position: relative;
@@ -135,107 +132,225 @@ body {
 .left_text_3 {
     width: 293px;
     height: 45px;
-    /*border: 1px solid black;*/
     font-size: 11px;
     color: #636564;
     position: relative;
     top: 40px;
 }
-.ul_musictype{
-  width: 506px;
-  height: 48px;
+
+.ul_musictype {
+    width: 506px;
+    height: 48px;
+    position: absolute;
+    top: 478px;
+    left: 10px;
+}
+
+.li_musictype {
+    width: 35px;
+    height: 12px;
+    color: #888;
+    font-size: 12px;
+    margin-right: 8px;
+    margin-bottom: 12px;
+    line-height: 12px;
+    border-right: 1px solid #ccc;
+    list-style: none;
+    float: left;
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+
+.li_musictype:hover {
+    color: #9dd6c5;
+    cursor: pointer;
+}
+
+.li_musictype_1 {
+    width: 62px;
+    height: 12px;
+}
+
+.li_musictype_2 {
+    width: 59px;
+    height: 12px;
+}
+
+.li_musictype_3 {
+    width: 47px;
+    height: 12px;
+}
+
+.li_musictype_4 {
+    width: 89px;
+    height: 12px;
+}
+
+#div_left_bottom {
+    width: 674px;
+    height: 980px;
+    position: absolute;
+    top: 572px;
+}
+
+.bottom_title_1 {
+    font-size: 13px;
+    position: absolute;
+    top: 6px;
+    left: 52px;
+}
+
+.ul_bottom {
+    width: 554px;
+    height: 350px;
+    position: absolute;
+    top: 30px;
+    left: 49px;
+}
+
+.li_bottom {
+    width: 236px;
+    height: 45px;
+    margin-right: 40px;
+    margin-bottom: 29px;
+    list-style: none;
+    float: left;
+    position: relative;
+    left: -37px;
+    cursor: pointer;
+}
+
+.span_1 {
+    font-size: 15px;
+    position: relative;
+    top: -27px;
+    left: 0px;
+}
+
+.span_2 {
+    color: #354079;
+    position: relative;
+    top: -27px;
+    left: 2px;
+}
+
+.span_3 {
+    font-size: 10px;
+    color: #a09b9b;
+    position: relative;
+    top: -27px;
+    left: 59px;
+}
+.span_3:hover{
+  color:#9dd6c5; 
+}
+
+.bottom_title_2 {
+    font-size: 13px;
+    position: absolute;
+    top: 430px;
+    left: 52px;
+}
+
+.ul_bottom_1 {
+    width: 554px;
+    height: 350px;
+    position: absolute;
+    top: 450px;
+    left: 49px;
+}
+
+.bottom_title_3 {
+    font-size: 13px;
+    position: absolute;
+    top: 850px;
+    left: 52px;
+}
+
+.ul_bottom_2 {
+    width: 554px;
+    height: 350px;
+    position: absolute;
+    top: 870px;
+    left: 49px;
+}
+.div_translate{
+  width: 304px;
+  height: 125px;
+  border: 1px solid #72908f;
+  background-color: white;
   position: absolute;
-  top: 478px;
+  top: 96px;
+  left: 110px;
+  z-index:10;
+}
+.div_translate_top{
+  width: 258px;
+  height: 60px;
+  border-bottom: 1px dotted #a09b9b;
+  position: absolute;
+  top: -8px;
+  left: 22px;
+   
+}
+.div_translate_bottom{
+  width: 258px;
+  height: 60px;
+  position: absolute;
+  left: 22px;
+  top: 78px;
+  
+}
+.span_up_1{
+  font-size: 15px;
+  color: #4b4b82;
+  font-weight: bolder;
+  position: relative;
+  top: 33px;
   left: 10px;
 }
-.li_musictype{
-  width: 35px;
-  height: 12px;
-  color: #888;
-  font-size: 12px;
-  margin-right: 8px;
-  margin-bottom: 12px;
-  line-height: 12px;
-  border-right: 1px solid #ccc;
-  list-style: none;
-  float: left;
-  position: relative;
-  top: 0px;
-  left: 0px;
-}
-.li_musictype:hover{
-  color: #9dd6c5;
-  cursor: pointer;
-}
-.li_musictype_1{
-   width: 62px;
-  height: 12px;
-}
-.li_musictype_2{
-   width: 59px;
-  height: 12px;
-}
-.li_musictype_3{
-   width: 47px;
-  height: 12px;
-}
-.li_musictype_4{
-   width: 89px;
-  height: 12px;
-}
-#div_left_bottom{
-  width: 674px;
-  height: 930px;
-  border: 1px solid black;
-  position: absolute;
-  top: 572px;
-}
-.bottom_title_1{
-  font-size: 13px;
-  position: absolute;
-  top: 6px;
-  left: 52px;
-}
-.ul_bottom{
-  width: 554px;
-  height: 350px;
-  position: absolute;
-  top: 30px;
-  left: 49px;
-}
-.li_bottom{
-  width: 236px;
-  height: 45px;
-  margin-right: 40px;
-  margin-bottom: 29px;
-  list-style: none;
-  float: left;
-  position: relative;
-  left: -37px;
-  cursor: pointer;
-}
-.span_1{
-  font-size: 15px;
-  position: relative;
-  top: -27px;
-  left: 0px;
-}
-.span_2{
-  color: #354079;
-  position: relative;
-  top: -27px;
-  left: 2px;
-}
-.span_3{
-  font-size: 10px;
+.span_up_2{
+  font-size: 14px;
   color: #a09b9b;
   position: relative;
-  top: -27px;
-  left: 59px;
+  top: 33px;
+  left: 7px;
 }
-.bottom_title_2{
-  font-size: 13px;
+.span_down_1{
+  font-size: 15px;
+  color: #4b4b82;
+  font-weight: bolder;
+  position: relative;
+  top:-5px;
+  left: 7px;
+}
+.span_down_2{
+  font-size: 14px;
+  color: #a09b9b;
+  position: relative;
+  top: -3px;
+  left: 4px;
+  
+}
+#div_controlline{
+  width: 40px;
+  height: 1500px;
   position: absolute;
-  top: 430px;
-  left: 52px;
+  top: 0px;
+  left: 633px;
+}
+#div_clickbutton{
+  width: 16px;
+  height: 85px;
+  font-weight: bolder;
+  line-height: 85px;
+  background-color: #e1e8e5;
+  position: absolute;
+  top:270px;
+  left: 26px;
+}
+#div_clickbutton:hover{
+  background-color: #a1dac9;
+  cursor: pointer;
 }
