--- a/1.css
+++ b/1.css
@@ -44,9 +44,10 @@ body {
     list-style: none;
     color: #999;
 }
-.li_title:hover{
-  cursor: pointer;
-  color: black;
+
+.li_title:hover {
+    cursor: pointer;
+    color: black;
 }
 
 .span_title_2 {
@@ -56,10 +57,12 @@ body {
     top: -37px;
     left: 72px;
 }
-.span_title_2:hover{
-  cursor: pointer;
-  color: black;
+
+.span_title_2:hover {
+    cursor: pointer;
+    color: black;
 }
+
 .span_title_3 {
     font-size: 12px;
     color: #999;
@@ -73,12 +76,13 @@ body {
     position: relative;
     top: -8px;
     left: -500px;
+    cursor: pointer;
 }
 
 #div_middle {
     width: 100%;
     height: 272px;
-    min-width:101%;
+    min-width: 101%;
     overflow: auto;
     border: 1px solid #e1e8e5;
     background-color: #e1e8e5;
@@ -147,7 +151,6 @@ body {
     margin-top: 14px;
     list-style: none;
 }
-
 
 .span_list {
     margin-left: 22px;
@@ -228,6 +231,7 @@ body {
     left: 213px;
     top: -221px;
     z-index: 5;
+    cursor: pointer;
 }
 
 .div_player_text {
@@ -390,24 +394,28 @@ body {
     position: absolute;
     top: 188px;
     left: 342px;
+    cursor: pointer;
 }
 
 #img_shanchu {
     position: absolute;
     top: 185px;
     left: 391px;
+    cursor: pointer;
 }
 
 #img_jiantou {
     position: absolute;
     top: 191px;
     left: 441px;
+    cursor: pointer;
 }
 
 #img_fasong {
     position: absolute;
     top: 262px;
     left: -9px;
+    cursor: pointer;
 }
 
 .div_listen {
@@ -439,8 +447,9 @@ body {
     top: 2px;
     left: 10px;
 }
-.div_enjoy{
-   width: 95px;
+
+.div_enjoy {
+    width: 95px;
     height: 24px;
     font-size: 14px;
     text-align: center;
@@ -449,98 +458,124 @@ body {
     position: absolute;
     top: 308px;
     left: 424px;
-    z-index:50;
-    
+    z-index: 50;
 }
 
 #div_music {
     width: 266px;
     height: 38px;
-    
     position: absolute;
     top: 307px;
     left: 249px;
 }
-#img_dou{
-  position: absolute;
-  top: 2px;
-  left: 101px;
+
+#img_dou {
+    position: absolute;
+    top: 2px;
+    left: 101px;
 }
-#img_wei{
-  position: absolute;
-  top: 2px;
-  left: 126px;
+
+#img_wei {
+    position: absolute;
+    top: 2px;
+    left: 126px;
 }
-#img_weixin{
-  position: absolute;
-  top: 3px;
-  left: 154px;
+
+#img_weixin {
+    position: absolute;
+    top: 3px;
+    left: 154px;
 }
-#img_qq{
-  position: absolute;
-  top: 3px;
-  left: 182px;
+
+#img_qq {
+    position: absolute;
+    top: 3px;
+    left: 182px;
 }
-#img_weibo{
-  position: absolute;
-  top: 1px;
-  left: 208px;
+
+#img_weibo {
+    position: absolute;
+    top: 1px;
+    left: 208px;
 }
-#img_renren{
-  position: absolute;
-  top: 1px;
-  left: 233px;
+
+#img_renren {
+    position: absolute;
+    top: 1px;
+    left: 233px;
 }
-#div_bottom{
-  width: 100%;
-  height: 370px;
-  border: 1px solid white;
-  position: relative;
-  top: -246px;
+
+#div_bottom {
+    width: 100%;
+    height: 370px;
+    border: 1px solid white;
+    position: relative;
+    top: -246px;
 }
-#img_xiazai{
-  position: absolute;
-  top: 20px;
-  left: 958px;
+
+#img_xiazai {
+    position: absolute;
+    top: 20px;
+    left: 958px;
+    cursor: pointer;
 }
-.div_bottom_text{
-  width: 910px;
-  height: 110px;
-  border: 1px solid white;
-  position: absolute;
-  top: 138px;
-  left: 221px;
+
+.div_bottom_text {
+    width: 910px;
+    height: 110px;
+    border: 1px solid white;
+    position: absolute;
+    top: 138px;
+    left: 221px;
 }
-#img_guanggao{
-  position: absolute;
-  top: 265px;
-  left: 190px;
+
+#img_guanggao {
+    position: absolute;
+    top: 265px;
+    left: 190px;
+    cursor: pointer;
 }
-.span_bottom_1{
-  font-size: 10px;
-  color:#999; 
-  position: absolute;
-  top: 20px;
-  left: 20px;
+
+.span_bottom_1 {
+    font-size: 10px;
+    color: #999;
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
-.span_bottom_2:hover{
-  background-color: #999;
-  color: white;
+
+.span_bottom_2:hover {
+    background-color: #999;
+    color: white;
+    cursor: pointer;
 }
-.span_bottom_3{
-  font-size: 10px;
-  color:#999; 
-  position: absolute;
-  top: 20px;
-  left: 524px;
+
+.span_bottom_3 {
+    font-size: 10px;
+    color: #999;
+    position: absolute;
+    top: 20px;
+    left: 524px;
 }
-.span_bottom_4{
-  font-size: 10px;
-  color:#999; 
-  position: absolute;
-  top: 60px;
-  left: 350px;
+
+.span_bottom_4 {
+    font-size: 10px;
+    color: #999;
+    position: absolute;
+    top: 60px;
+    left: 350px;
 }
-.li_middle_1:hover{
-  background-color: #a1a5a8;
+
+.span_bottom_3:hover {
+    color: black;
+    cursor: pointer;
+}
+
+.span_bottom_4:hover {
+    color: black;
+    cursor: pointer;
+}
+
+.li_middle_1:hover {
+    background-color: #a1a5a8;
 }
